--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Website</title>
+    <title>Zakariar Portfolio Website</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -79,13 +79,11 @@
         <div class="header-content">
           <div class="container grid-2">
             <div class="column-1">
-              <h1 class="header-title">John Dorsey</h1>
+              <h1 class="header-title">Md. Zakaria</h1>
               <p class="text">
-                Hello, I'm Miley Brewer, web design and developer. Lorem ipsum
-                dolor sit amet consectetur adipisicing elit. Totam magni sit
-                hic!
+                Hello, I'm Md.Zakaria, Front-end Web developer.
               </p>
-              <a href="#" class="btn">Download CV</a>
+              <a href="/Front end developer.pdf" download="Resume" target="_blank" class="btn">Download CV</a>
             </div>
 
             <div class="column-2 image">
@@ -240,7 +238,7 @@
                   <div class="img-overlay">
                     <div class="plus"></div>
                     <div class="img-description">
-                      <h3>Web Design</h3>
+                      <h3>Web DeFront end developer.pdfsign</h3>
                       <h5>View Demo</h5>
                     </div>
                   </div>
@@ -631,21 +629,21 @@
                   <div class="contact-icon">
                     <i class="fas fa-map-marker-alt"></i>
                   </div>
-                  <p class="info-text">92 Cherry Drive Unimodale, NY 11553</p>
+                  <p class="info-text">Kushtia, Bangladesh</p>
                 </div>
 
                 <div class="information">
                   <div class="contact-icon">
                     <i class="fas fa-paper-plane"></i>
                   </div>
-                  <p class="info-text">lorem@ipsum.com</p>
+                  <p class="info-text">zakariaprogrammer010@gmail.com</p>
                 </div>
 
                 <div class="information">
                   <div class="contact-icon">
                     <i class="fas fa-phone-alt"></i>
                   </div>
-                  <p class="info-text">123-456-789</p>
+                  <p class="info-text">+880 1736344458</p>
                 </div>
               </div>
             </div>
@@ -767,8 +765,8 @@
         <div class="bottom-footer">
           <div class="copyright">
             <p class="text">
-              Copyright&copy;2020 All rights reserved | Made by
-              <span>True Coder</span>
+              Copyright&copy;2022 All rights reserved | Made by
+              <span>Md. Zakaria</span>
             </p>
           </div>
 
@@ -777,7 +775,7 @@
               <h3>Follow me</h3>
               <span class="footer-line"></span>
               <div class="social-media">
-                <a href="#">
+                <a href="https://www.facebook.com/Muhammad.Jakaria.Mahmud.230161">
                   <i class="fab fa-facebook-f"></i>
                 </a>
                 <a href="#">
@@ -786,7 +784,7 @@
                 <a href="#">
                   <i class="fab fa-instagram"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.linkedin.com/in/jakaria230161/">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
               </div>
