--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 class="points points2"
                 alt=""
               />
-              <img src="./img/person.png" class="img-element z-index" alt="" />
+              <img src="./img/imran.jpg" class="img-element z-index" alt="" />
             </div>
           </div>
         </div>
